[project]
name = "dg_experiment"
version = "0.1.0"
description = "A experiment project with the new `dg` cli and related tooling for Dagster"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster==1.10.19",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli[local]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dg_experiment"
autoload_defs = true


[tool.dg.project.python_environment]
active = true
